# model-traning-orchestrator

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
source/: __init__.py  cli.py  training_orchestrator.py
tests/: test_cli.py  test_training_orchestrator.py
