[project]
name = "model-traning-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.33.1",
]

[project.scripts]
training-orchestrator = "source.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "responses>=0.26.0",
]
